// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipes card component  render as expected 1`] = `
<div
  className="recipe-card"
>
  <div
    className="recipe-card-body"
  >
    <img
      alt="rice and beans"
      className="recipe-card-img"
      src="https://i.pinimg.com/564x/b5/be/08/b5be084a849fa67c190cc85b1e9216c3.jpg"
    />
    <div
      className="recipe-card-underlay"
    >
      <p
        className="lead text-capitalize"
      >
        dinner
      </p>
      <a
        href="recipe/1"
        onClick={[Function]}
      >
        <button
          className="btn text-capitalize recipe-card-underlay-btn"
          data-dismiss="modal"
          data-target={undefined}
          data-toggle={undefined}
          onClick={undefined}
          type="button"
        >
          view details
        </button>
      </a>
    </div>
  </div>
  <div
    className="recipe-card-footer"
  >
    <h4>
      rice and beans
    </h4>
    <div
      className="d-flex col-12 no-padding justify-content-between"
    >
      <div
        className="d-flex col-8 no-padding"
      >
        <div
          className="icon-wrapper"
          onClick={undefined}
          onMouseEnter={undefined}
        >
          <i
            className="icon fa fa-thumbs-up recipe-card-icon "
            data-target={undefined}
            data-toggle={undefined}
          >
            <span>
              30
            </span>
          </i>
        </div>
        <div
          className="icon-wrapper"
          onClick={undefined}
          onMouseEnter={undefined}
        >
          <i
            className="icon fa fa-thumbs-down recipe-card-icon "
            data-target={undefined}
            data-toggle={undefined}
          >
            <span>
              0
            </span>
          </i>
        </div>
        <div
          className="icon-wrapper"
          onClick={undefined}
          onMouseEnter={undefined}
        >
          <i
            className="icon fa fa-eye recipe-card-icon"
            data-target={undefined}
            data-toggle={undefined}
          >
            <span>
              120
            </span>
          </i>
        </div>
      </div>
      <div
        className="icon-wrapper pointer"
        onClick={[Function]}
        onMouseEnter={undefined}
      >
        <i
          className="icon fa recipe-card-icon fav-color fav fa-heart-o"
          data-target={undefined}
          data-toggle={undefined}
        >
          <span />
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`Recipes card component  render as expected when favorite icon is clicked  1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "blank",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <RecipeCard
      category="dinner"
      downVotes={0}
      isFav={[Function]}
      recipeId={1}
      recipeName="rice and beans"
      toggleFav={[Function]}
      upVotes={30}
      views={120}
    >
      <div
        className="recipe-card"
      >
        <div
          className="recipe-card-body"
        >
          <img
            alt="rice and beans"
            className="recipe-card-img"
            src="https://i.pinimg.com/564x/b5/be/08/b5be084a849fa67c190cc85b1e9216c3.jpg"
          />
          <div
            className="recipe-card-underlay"
          >
            <p
              className="lead text-capitalize"
            >
              dinner
            </p>
            <Link
              replace={false}
              to="recipe/1"
            >
              <a
                href="recipe/1"
                onClick={[Function]}
              >
                <Button
                  className="recipe-card-underlay-btn"
                  text="view details"
                >
                  <button
                    className="btn text-capitalize recipe-card-underlay-btn"
                    data-dismiss="modal"
                    type="button"
                  >
                    view details
                  </button>
                </Button>
              </a>
            </Link>
          </div>
        </div>
        <div
          className="recipe-card-footer"
        >
          <h4>
            rice and beans
          </h4>
          <div
            className="d-flex col-12 no-padding justify-content-between"
          >
            <div
              className="d-flex col-8 no-padding"
            >
              <Icon
                iconClass="fa fa-thumbs-up recipe-card-icon "
              >
                <div
                  className="icon-wrapper"
                >
                  <i
                    className="icon fa fa-thumbs-up recipe-card-icon "
                  >
                    <span>
                      30
                    </span>
                  </i>
                </div>
              </Icon>
              <Icon
                iconClass="fa fa-thumbs-down recipe-card-icon "
              >
                <div
                  className="icon-wrapper"
                >
                  <i
                    className="icon fa fa-thumbs-down recipe-card-icon "
                  >
                    <span>
                      0
                    </span>
                  </i>
                </div>
              </Icon>
              <Icon
                iconClass="fa fa-eye recipe-card-icon"
              >
                <div
                  className="icon-wrapper"
                >
                  <i
                    className="icon fa fa-eye recipe-card-icon"
                  >
                    <span>
                      120
                    </span>
                  </i>
                </div>
              </Icon>
            </div>
            <Icon
              handleClick={[Function]}
              iconClass="fa recipe-card-icon fav-color fav fa-heart-o"
              pointer={true}
            >
              <div
                className="icon-wrapper pointer"
                onClick={[Function]}
              >
                <i
                  className="icon fa recipe-card-icon fav-color fav fa-heart-o"
                >
                  <span />
                </i>
              </div>
            </Icon>
          </div>
        </div>
      </div>
    </RecipeCard>
  </Router>
</BrowserRouter>
`;

exports[`Recipes card component  render as expected when favorite icon is clicked  2`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "blank",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <RecipeCard
      category="dinner"
      downVotes={0}
      isFav={[Function]}
      recipeId={1}
      recipeName="rice and beans"
      toggleFav={[Function]}
      upVotes={30}
      views={120}
    >
      <div
        className="recipe-card"
      >
        <div
          className="recipe-card-body"
        >
          <img
            alt="rice and beans"
            className="recipe-card-img"
            src="https://i.pinimg.com/564x/b5/be/08/b5be084a849fa67c190cc85b1e9216c3.jpg"
          />
          <div
            className="recipe-card-underlay"
          >
            <p
              className="lead text-capitalize"
            >
              dinner
            </p>
            <Link
              replace={false}
              to="recipe/1"
            >
              <a
                href="recipe/1"
                onClick={[Function]}
              >
                <Button
                  className="recipe-card-underlay-btn"
                  text="view details"
                >
                  <button
                    className="btn text-capitalize recipe-card-underlay-btn"
                    data-dismiss="modal"
                    type="button"
                  >
                    view details
                  </button>
                </Button>
              </a>
            </Link>
          </div>
        </div>
        <div
          className="recipe-card-footer"
        >
          <h4>
            rice and beans
          </h4>
          <div
            className="d-flex col-12 no-padding justify-content-between"
          >
            <div
              className="d-flex col-8 no-padding"
            >
              <Icon
                iconClass="fa fa-thumbs-up recipe-card-icon "
              >
                <div
                  className="icon-wrapper"
                >
                  <i
                    className="icon fa fa-thumbs-up recipe-card-icon "
                  >
                    <span>
                      30
                    </span>
                  </i>
                </div>
              </Icon>
              <Icon
                iconClass="fa fa-thumbs-down recipe-card-icon "
              >
                <div
                  className="icon-wrapper"
                >
                  <i
                    className="icon fa fa-thumbs-down recipe-card-icon "
                  >
                    <span>
                      0
                    </span>
                  </i>
                </div>
              </Icon>
              <Icon
                iconClass="fa fa-eye recipe-card-icon"
              >
                <div
                  className="icon-wrapper"
                >
                  <i
                    className="icon fa fa-eye recipe-card-icon"
                  >
                    <span>
                      120
                    </span>
                  </i>
                </div>
              </Icon>
            </div>
            <Icon
              handleClick={[Function]}
              iconClass="fa recipe-card-icon fav-color fav fa-heart-o"
              pointer={true}
            >
              <div
                className="icon-wrapper pointer"
                onClick={[Function]}
              >
                <i
                  className="icon fa recipe-card-icon fav-color fav fa-heart-o"
                >
                  <span />
                </i>
              </div>
            </Icon>
          </div>
        </div>
      </div>
    </RecipeCard>
  </Router>
</BrowserRouter>
`;
